[package]
name = "raid-analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
prost = "0.12.6"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
serde_repr = "0.1.19"
sqlx = "0.7.4"
tokio = { version = "1.36.0", features = ["full"] }

[build-dependencies]
prost-build = "0.12.6"
